Gør bevis pænere

--- a/preamble.tex
+++ b/preamble.tex
@@ -273,7 +273,7 @@
 \newtheorem{example}[theorem]{Eksempel}
 
 % Optionally, create a custom command for proof environment
-\renewenvironment{proof}{{\bfseries\sffamily Bevis:\;}}{\qed}
+\renewenvironment{proof}{\vspace{10pt}{\large\noindent\bfseries\sffamily Bevis:\\}}{\qed \vspace{10pt}}
 
 
 \frenchspacing
